# XAct.jl

./: .JuliaFormatter.toml  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  Project.toml  README.md  SETUP.md  TensorDSL_Specification_v0.1.0.md  justfile  llms.txt  main.py  mkdocs.yml  pyproject.toml
.beads/: .beads-credential-key  interactions.jsonl  issues.jsonl  metadata.json  pre-migration-export.jsonl
.binder/: Dockerfile
.claude/: settings.local.json
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
benchmarks/: bench_xcore.py  ci_baseline.json  xcore_baseline.json
docs/: Manifest.toml  Project.toml  make.jl  oracle-quirks.md  tensordsl-integration.md
handoffs/: 2026-03-10_09-53-51_p1-milestones-complete.md  2026-03-10_14-39-13_p2-milestones-perturb-gradedsym-simplify.md  2026-03-10_17-09-54_P2-milestones-simplify-curvature-pertorders-ibp-vard.md  2026-03-11_10-40-48_basis-frame-complete.md  2026-03-11_15-24-55_xcoba-coord-transforms-ctensor.md  2026-03-13_12-32-30_xtras-utilities.md  2026-03-16_10-41-04_sxAct-x8q_multi-term-identity-framework.md  2026-03-16_12-32-50_invar-phases-2-3-5-complete.md  2026-03-16_15-20-32_invar-phases-1-10-complete.md  2026-03-16_20-26-41_wolfram-expression-translator.md  2026-03-17_10-55-45_invar-convention-fix-and-e2e-tests.md  2026-03-17_13-16-48_backtracking-canonicalization-v2.md  2026-03-17_21-08-54_translate-migration-jet-fix.md  2026-03-18_16-21-49_texpr-docs-and-install-fixes.md  2026-03-23_18-16-41_architecture-diagnostics-round.md
oracle/: Dockerfile  VERSION  checksums.sha256  kernel_manager.py  server.py
plans/: 2026-01-22-documentation-plan.md  2026-01-22-sprint1-derisk-equivalence.md  2026-03-08-elegua-chacana-ecosystem.md  2026-03-11-multi-term-symmetry-engine.md  2026-03-17-texpr-tdd-spec.md  2026-03-17-typed-expression-api.md  2026-03-20-architecture-hardening.md  README.md
research/: METAMIGRATION_HARNESS.md  PUBLICATIONS_DRAFTS_PLAN.md  SCIENTIFIC_IMPACT_AND_APPLICATIONS.md  symbolics-integration.md
specs/: README.md  (+24 more)
(+771 files in other folders)
