[project]
name = "sxact-workspace"
version = "0.4.0"
description = "Development workspace for xAct implementations"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "sashakile", email = "saxa.kile@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "sxact",
    "xact-py",
]

[project.urls]
Homepage = "https://github.com/sashakile/sxAct"
Repository = "https://github.com/sashakile/sxAct"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
sxact = { workspace = true }
xact-py = { workspace = true }

[tool.mypy]
python_version = "3.10"
mypy_path = "packages/xact-py/src:packages/sxact/src"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["^tests/", "^scripts/", "^benchmarks/", "^oracle/", "^main\\.py$"]

[[tool.mypy.overrides]]
# External packages without type stubs
module = ["juliacall", "juliacall.*", "jsonschema", "jsonschema.*", "wolframclient", "wolframclient.*", "flask", "flask.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/xact-py/src", "packages/sxact/src"]
markers = [
    "oracle: tests requiring the Docker oracle server",
    "slow: tests that take a long time to run (xAct loading ~3+ min)",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
    "jupyterlab>=4.5.6",
]
